Fixed Navigation bar (yes this is a pun). Found responsive solutions. Added stretch goal to new page using link 'Vision' TODO: vertically align navigation links. find possible uses of hover animation.

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -66,94 +66,93 @@ h1, h2, h3, h4, h5 {
 /* Your code starts here! */
 body{
 	/* border: dashed red 4px; */
-	width: 900px;
-	margin: 0 auto;
+	width: 100%;
+	margin: auto;
 }
 /* nav and logo */
 nav {
+	background-color: hsl(210, 3%,97%);
 	/* border: dashed red 4px; */
 	display: inline-block;
-    width: 700px;
-	vertical-align: top;
-	margin-top: 25px;
+    width: 100%;
+	position: fixed;
 }
 /* nav style */
 nav a {
 	/* border: dashed red 4px; */
 	color: gray;
 	text-decoration: none;
-	margin-right: 65px;
-	font-size: 14px;
+	margin:3%;
+	width: 4%;
+	vertical-align: bottom;
 }
-nav a:first-child {
-	margin-left: 0;
-}
-nav a:last-child {
-	margin-right: 0;
-}
-.logo {
-	margin-top: 25px;
+
+nav .logo {
+	float:right;
+	margin-right: 10px;
+	vertical-align: bottom;
 }
 /*headeer text--------header image */
-header .heading-text {
+header{
+	width: 98%;
+	overflow: hidden;
+}
+
+.heading-text {
 	/* border: dashed red 4px; */
  	display: inline-block;
 	vertical-align: top;
 	text-align: center;
-	margin-top: 120px;
-	font-size: 50px;
-	padding: 0px 75px;
+	margin-top: 25%;
+	font-size: 350%;
+	padding: 0 75px;
+	width: 43%;
 }
 header button {
 	/* border: dashed red 4px; */
 	font-size: 17px;
-	background: white;
-	vertical-align: top;
-	margin-top: 5px;
-	padding: 10px 45px;
+	background: hsl(210, 10%, 95%);
+	padding: 3px;
+	border-radius: 4px;
 	border: 1px solid black;
+
 }
 header img {
-	display: inline-block;
+	display: inline;
 	margin-top: 75px;
+	width: 43%;
+	padding:2%;
 }
 /*  top-articls,  img, and bottom-content */
 
 .exposition {
-	/* border: dashed red 4px; */
+	/*border: dashed red 4px;*/
+	overflow: hidden;
 	border-top: 1px solid black;
 	margin-top: 76px;
 	padding-top: 39px;
+	width: 98%;
 }
-.exposition . {
-	padding: 0 10px;
-}
-.exposition .midriff article {
-	/* border: dashed red 4px; */
-	width: 410px;
+#features, #about{
+	width:48%;
+	text-align: justify;
 	display: inline-block;
-	margin-right: 34px;
+	padding: 5px;
 }
-.exposition .midriff article:last-child {
-	margin-right: 0;
-}
+
+
 .exposition .middle-img {
-	margin-top: 45px;
+	width:98%;
+	padding:2%;
 }
-.exposition .junior {
-	/* border: dashed red 4px; */
-	margin-top: 37px;
-	padding: 0 10px;
-}
-.exposition .junior article {
-	/* border: dashed red 4px; */
-	width: 275px;
+
+#product,#services,#vision{
+	text-align: justify;
+	padding: 5px;
 	display: inline-block;
-	margin-right: 12px;
+	width: 33%;
 }
-.exposition .junior article:last-child {
-	margin-right: 0;
-}
+
 /* Contact-address paragraph addresses */
 address {
 	/* border: dashed red 4px; */
